# sam-labeling-studio

./: .gitignore  .gitmodules  Info.plist  README.md  image_viewer.py  list_item_widget.py  main.py  pyproject.toml  requirements.txt  threads.py  ui.py  utils.py
api/: sam_handler.py
configs/: app_config.yaml
src/: colorpicker.py  convex_hull_test.py  edit_controls.py  extra_dialogs.py  image_viewer.py  list_item_widget.py  project.py  sam_thread.py  startup.py  threads.py  transformation_dialog.py  ui.py  utils.py  zoom.py
src/formats/: coco.py
src/models/sam2/: sam2_image_predictor.py
src/models/sam2/modeling/: position_encoding.py  sam2_base.py  sam2_utils.py
src/models/sam2/modeling/backbones/: hieradet.py  utils.py
src/models/sam2/modeling/sam/: mask_decoder.py  transformer.py
src/models/sam2/utils/: amg.py  misc.py
src/transformations/: __init__.py  base.py  polygon.py
